frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: Shentox;
  src: url("./fonts/Shentox/Shentox-Regular.ttf");
}

@font-face {
  font-family: Shentox-Medium;
  src: url("./fonts/Shentox/Shentox-Medium.ttf");
}

@layer base {
  html {
    @apply overflow-x-hidden;
  }

  body,
  main {
    @apply text-lg text-slate-200 bg-[#101010] min-h-screen font-shentox;
  }

  main {
    /* 
      each main component can have different layout, avoid adding
      global positioning, style them individually instead
    */
  }

  a {
    @apply text-blue-500 hover:text-blue-400 no-underline;
  }

  input {
    @apply text-black;
  }

  .text30-48 {
    @apply text-3xl md:text-4xl lg:text-5xl;
  }
  .text20-36 {
    @apply text-[20px] md:text-[30px] lg:text-[36px];
  }
  .text14-36 {
    @apply text-[14px] sm:text-[18px] md:text-[20px] lg:text-[36px];
  }
  .text20-30 {
    @apply text-[20px] sm:text-[24px] md:text-[30px];
  }
  .text18-30 {
    @apply text-[18px] md:text-[30px];
  }
  .text16-28 {
    @apply text-[16px] sm:text-[20px] md:text-[24px] lg:text-[28px];
  }
  .text14-26 {
    @apply text-[14px] md:text-[26px];
  }
  .text18-24 {
    @apply text-[18px] sm:text-[20px] lg:text-[24px];
  }
  .text16-24 {
    @apply text-[16px] sm:text-[20px] lg:text-[24px];
  }
  .text14-24 {
    @apply text-[16px] sm:text-[18px] md:text-[20px] lg:text-[24px];
  }
  .text18-20 {
    @apply text-[18px] sm:text-[20px];
  }
  .text16-20 {
    @apply text-[16px] sm:text-[20px];
  }
  .text14-20 {
    @apply text-[14px] sm:text-[20px];
  }
  .text14-18 {
    @apply text-[14px] sm:text-[18px];
  }
  .text16-18 {
    @apply text-[16px] sm:text-[18px];
  }
  .text14-16 {
    @apply text-[14px] sm:text-[16px];
  }
  .text12-20 {
    @apply text-[12px] sm:text-[14px] md:text-[20px];
  }
  .text10-18 {
    @apply text-[10px] sm:text-[12px] md:text-[18px];
  }
  .text12-16 {
    @apply text-[12px] sm:text-[14px] md:text-[16px];
  }
  .text12-14 {
    @apply text-[12px] sm:text-[14px];
  }
  .text14 {
    @apply text-[14px];
  }
  .text10-14 {
    @apply text-[10px] lg:text-[14px];
  }
  .text10-12 {
    @apply text-[10px] md:text-[12px];
  }

  .mt130-300 {
    @apply mt-32 sm:mt-[200px] md:mt-[300px];
  }
  .mt150-250 {
    @apply mt-[150px] md:mt-[200px] lg:mt-[250px];
  }
  .mt130-200 {
    @apply mt-32 sm:mt-36 lg:mt-[200px];
  }
  .mt100-200 {
    @apply mt-[100px] md:mt-[200px];
  }
  .mt100-150 {
    @apply mt-[100px] md:mt-[150px];
  }
  .mt50-150 {
    @apply mt-12 sm:mt-[150px];
  }
  .mt40-50 {
    @apply mt-10 sm:mt-[50px];
  }
  .mt30-50 {
    @apply mt-[30px] sm:mt-[50px];
  }
  .mt10-20 {
    @apply mt-2.5 md:mt-5;
  }
}

header + main {
  /* account for header height, while maintaining the background image height: 100vh */
  padding-top: 4rem !important;
}

